--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,11 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'theme.scss';
 
-html,
-body {
-    height: 100%;
-}
-
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
